--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,64 @@ build/uppgift2.vcxproj
 build/uppgift2.vcxproj.filters
 build/ZERO_CHECK.vcxproj
 build/ZERO_CHECK.vcxproj.filters
+build/.vs/TND012-Lab-6/v16/.suo
+build/.vs/TND012-Lab-6/v16/ipch/AutoPCH/2cf13ac71142b0b8/MAIN.ipch
+build/.vs/TND012-Lab-6/v16/ipch/AutoPCH/33eecc0b54f16062/MOVIE.ipch
+build/.vs/TND012-Lab-6/v16/ipch/AutoPCH/8decc0cb7f7ad9c5/EMPLOYEE.ipch
+build/.vs/TND012-Lab-6/v16/ipch/AutoPCH/b2ee5ac323eaa8e4/UPPGIFT1.ipch
+build/ALL_BUILD.vcxproj.user
+build/CMakeFiles/8ba2d125002a75acbcd314b7d84b7011/generate.stamp.rule
+build/Debug/uppgift1.exe
+build/Debug/uppgift1.pdb
+build/Debug/uppgift2.pdb
+build/uppgift1.dir/Debug/movie.obj
+build/uppgift1.dir/Debug/uppgift1.Build.CppClean.log
+build/uppgift1.dir/Debug/uppgift1.exe.recipe
+build/uppgift1.dir/Debug/uppgift1.ilk
+build/uppgift1.dir/Debug/uppgift1.log
+build/uppgift1.dir/Debug/uppgift1.obj
+build/uppgift1.dir/Debug/uppgift1.tlog/CL.command.1.tlog
+build/uppgift1.dir/Debug/uppgift1.tlog/CL.read.1.tlog
+build/uppgift1.dir/Debug/uppgift1.tlog/CL.write.1.tlog
+build/uppgift1.dir/Debug/uppgift1.tlog/CustomBuild.command.1.tlog
+build/uppgift1.dir/Debug/uppgift1.tlog/CustomBuild.read.1.tlog
+build/uppgift1.dir/Debug/uppgift1.tlog/CustomBuild.write.1.tlog
+build/uppgift1.dir/Debug/uppgift1.tlog/link.command.1.tlog
+build/uppgift1.dir/Debug/uppgift1.tlog/link.read.1.tlog
+build/uppgift1.dir/Debug/uppgift1.tlog/link.write.1.tlog
+build/uppgift1.dir/Debug/uppgift1.tlog/uppgift1.lastbuildstate
+build/uppgift1.dir/Debug/uppgift1.vcxproj.FileListAbsolute.txt
+build/uppgift1.dir/Debug/vc142.pdb
+build/uppgift1.vcxproj.user
+build/uppgift2.dir/Debug/image.obj
+build/uppgift2.dir/Debug/uppgift2.Build.CppClean.log
+build/uppgift2.dir/Debug/uppgift2.log
+build/uppgift2.dir/Debug/uppgift2.obj
+build/uppgift2.dir/Debug/uppgift2.tlog/CL.command.1.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/CL.read.1.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/CL.write.1.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/CustomBuild.command.1.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/CustomBuild.read.1.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/CustomBuild.write.1.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/link-cvtres.read.1.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/link-cvtres.write.1.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/link-rc.read.1.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/link-rc.write.1.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/link.command.1.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/link.read.1.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/link.read.2.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/link.write.1.tlog
+build/uppgift2.dir/Debug/uppgift2.tlog/unsuccessfulbuild
+build/uppgift2.dir/Debug/uppgift2.tlog/uppgift2.lastbuildstate
+build/uppgift2.dir/Debug/uppgift2.vcxproj.FileListAbsolute.txt
+build/uppgift2.dir/Debug/vc142.pdb
+build/x64/Debug/ZERO_CHECK/ZERO_CHECK.Build.CppClean.log
+build/x64/Debug/ZERO_CHECK/ZERO_CHECK.log
+build/x64/Debug/ZERO_CHECK/ZERO_CHECK.recipe
+build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.command.1.tlog
+build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.read.1.tlog
+build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.write.1.tlog
+build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/ZERO_CHECK.lastbuildstate
+build/x64/Debug/ZERO_CHECK/ZERO_CHECK.vcxproj.FileListAbsolute.txt
+build/.vs/TND012-Lab-6/v16/ipch/AutoPCH/13704f959c492e96/UPPGIFT2.ipch
+build/.vs/TND012-Lab-6/v16/ipch/AutoPCH/f59a9136e7c376fa/IMAGE.ipch
