--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@ build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/ZERO_CHECK.lastbuildstate
 build/x64/Debug/ZERO_CHECK/ZERO_CHECK.vcxproj.FileListAbsolute.txt
 build/.vs/TND012-Lab-6/v16/ipch/AutoPCH/13704f959c492e96/UPPGIFT2.ipch
 build/.vs/TND012-Lab-6/v16/ipch/AutoPCH/f59a9136e7c376fa/IMAGE.ipch
+build/
